--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/018 fake-human-circle-img.png" alt="this is Wasif Hussain"></td>
+            <td><img src="images/WhatsApp Image 2022-11-18 at 3.59.04 PM-modified.png" alt="this is Wasif Hussain"></td>
             <td>
                 <h1>WASIF HUSSAIN</h1>
                 <hr size="3" noshade>
